--- a/tab/css/style.css
+++ b/tab/css/style.css
@@ -1,19 +1,13 @@
 body {
 	font-size: 24px;
 }
-.container {
-	border: 1px solid green;
-
-}
 
 .main {
 	/*position: relative;*/
 	width: 800px;
 	height: 500px;
 	margin: 40px auto;
-	border: 1px solid red;
 	background-image: url(../img/background.png);
-	
 }
 li.active {
 	background-color: #03a5da;
@@ -76,5 +70,11 @@ input {
 	top: -90px;
 	left: 73%;
 	padding: 12px 49px 12px 25px ;
-	
+	animation-delay: 1s;
+}
+.form-control{
+	animation-delay: 0.4s;
+}
+.next {
+	animation-delay: 0.6s;
 }
