--- a/src/css/style.css
+++ b/src/css/style.css
@@ -181,7 +181,6 @@ section {
   font-size: 1.6rem;
   margin-bottom: 1.4rem;
 }
-/* Оформление блока с преимуществами */
 /* Преимущества */
 .features-block {
   text-align: center;
@@ -407,6 +406,55 @@ img {
   bottom: 0;
   left: 5%;
 }
+/* Схема работы */
+.scheme {
+  background: url(../img/scheme/scheme-bg.png) bottom -12rem right -5rem no-repeat;
+  background-size: 75rem;
+}
+.scheme h4 {
+  font-family: 'ProximaNova_Bold', sans-serif;
+  font-size: 2.2rem;
+}
+.scheme p {
+  font-size: 1.7rem;
+}
+.scheme-block {
+  height: 30rem;
+}
+/* Все на 100% включено! */
+.all-inclusive {
+  background-color: #f0f0e4;
+}
+.circle {
+  display: inline-block;
+  background-color: #46b814;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.circle-border {
+  display: inline-block;
+  text-align: center;
+  width: 5rem;
+  height: 5rem;
+  border: 2px solid #46b814;
+  border-radius: 50%;
+  line-height: 4rem;
+  padding: 0.3rem;
+  color: #ffffff;
+  font-family: 'ProximaNova_Bold', sans-serif;
+  font-size: 1.7rem;
+}
+.media {
+  min-height: 15rem;
+}
+.media h4 {
+  font-size: 2.2rem;
+  font-family: 'ProximaNova_Bold', sans-serif;
+}
+.media p {
+  font-size: 1.3rem;
+}
 @media (max-width: 1199px) {
   .fotorama {
     margin-bottom: 3rem;
@@ -414,6 +462,9 @@ img {
   .form-input {
     margin: 2rem auto;
     max-width: 60%;
+  }
+  .scheme {
+    text-align: center;
   }
 }
 @media (max-width: 991px) {
@@ -449,6 +500,9 @@ img {
   }
   .hand {
     display: none;
+  }
+  .scheme {
+    background: none;
   }
 }
 @media (max-width: 767px) {
