--- a/src/less/style.less
+++ b/src/less/style.less
@@ -221,10 +221,6 @@ section{
 	}
 }
 
-
-
-/* Оформление блока с преимуществами */
-
 /* Преимущества */
 .features {
 	&-block{
@@ -248,13 +244,11 @@ section{
   margin: 0 auto 2rem;
    }
 	 }
-	}
+}
 
 
-
-
-	/* Отключение обводки активного слайда */
-	.slick-active{
+/* Отключение обводки активного слайда */
+.slick-active{
 		outline: none;
 	}
 	.arrow{
@@ -280,7 +274,7 @@ section{
 
 
 /* Модальные окна */
-  .popup {
+.popup {
   	display: none;
   	position: fixed;
 			left: 0;
@@ -442,6 +436,8 @@ section{
   			}
   		}
 		}
+
+
 	/* Блок обратной связи */
 	  &-form {
 			text-align: center;
@@ -463,8 +459,61 @@ section{
 		bottom: 0;
 		left: 5%;
 	}
+
+/* Схема работы */
+.scheme {
+	background: url(../img/scheme/scheme-bg.png) bottom -12rem right -5rem no-repeat;
+	background-size: 75rem;
+	h4 {
+		.bold;
+		font-size: 2.2rem;
+	}
+
+	p {
+		font-size: 1.7rem;
+	}
+
+	&-block {
+		height: 30rem;
+	}
+}
+
+/* Все на 100% включено! */
+.all-inclusive {
+	background-color: @bg-light;
+}
+.circle {
+	display: inline-block;
+	background-color: @icon-color;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	&-border {
+		display: inline-block;
+		text-align: center;
+		width: 5rem;
+		height: 5rem;
+		border: 2px solid @icon-color;
+		border-radius: 50%;
+		line-height: 4rem;
+		padding: 0.3rem;
+		color: @light;
+		.bold;
+		font-size: 1.7rem;
+	}
+}
+.media {
+	min-height: 15rem;
+	h4{
+		font-size: 2.2rem;
+		.bold;
+	}
+	p {
+		font-size: 1.3rem;
+	}
+}
 		
-		@media (max-width:1199px) {
+@media (max-width:1199px) {
 			.fotorama{
 				margin-bottom: 3rem;
 			}
@@ -474,9 +523,13 @@ section{
 					max-width: 60%;
 				}
 			}
+			.scheme {
+	text-align: center;
 		}
+}
+
 		
-		@media (max-width: 991px) {
+@media (max-width: 991px) {
 			.main{
 		background-position:top right;
 			}
@@ -504,8 +557,8 @@ section{
  	}
  .section-header_light {
  	margin-bottom: 0;
- }
-.form {
+  }
+ .form {
 	&-input {
 		margin: 2rem auto;
 		max-width: 100%;
@@ -513,8 +566,12 @@ section{
  }
   .hand {
  	 display: none;
-  }
+	}
+	.scheme {
+		background: none;
+	}
 }
+ 
 @media (max-width: 767px){
  .header{
  	text-align: center;
