--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,7 @@
 /*--почти белый --*/
 /*-- белый --*/
 /*-- серый --*/
+/* --черный полупрозрачный-- */
 /* Basic settings */
 body {
   font-size: 10px;
@@ -445,6 +446,49 @@ img {
   font-family: 'ProximaNova_Bold', sans-serif;
   font-size: 1.7rem;
 }
+/* Мы развеем все проблемы */
+.problems {
+  position: relative;
+}
+.problems-h4-bad {
+  opacity: 50%;
+  font-size: 2.4rem;
+  font-family: 'ProximaNova_Bold', sans-serif;
+  padding-bottom: 1rem;
+}
+.problems-h4-good {
+  font-size: 2.4rem;
+  font-family: 'ProximaNova_Bold', sans-serif;
+  padding-bottom: 1rem;
+}
+.problems-women {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-57%);
+          transform: translateX(-57%);
+}
+.problems p {
+  font-size: 1.6rem;
+  padding-bottom: 2rem;
+}
+.problems img {
+  float: left;
+  padding-right: 1rem;
+  margin-top: 0.3rem;
+}
+.problems-bad {
+  min-height: 38rem;
+  padding: 1.8rem;
+  border: 4px solid #c5c5c5;
+  margin-bottom: 3rem;
+}
+.problems-good {
+  min-height: 38rem;
+  border: 4px solid #46b814;
+  padding: 1.8rem;
+}
 .media {
   min-height: 15rem;
 }
@@ -465,6 +509,16 @@ img {
   }
   .scheme {
     text-align: center;
+    margin-bottom: 2rem;
+  }
+  .problems-women {
+    display: none;
+  }
+  .problems-bad {
+    padding: 1rem;
+  }
+  .problems-good {
+    padding: 1rem;
   }
 }
 @media (max-width: 991px) {
@@ -503,6 +557,22 @@ img {
   }
   .scheme {
     background: none;
+  }
+  .problems {
+    text-align: center;
+  }
+  .problems-bad {
+    text-align: center;
+    padding: 3rem;
+  }
+  .problems-bad p {
+    text-align: left;
+  }
+  .problems-good {
+    padding: 3rem;
+  }
+  .problems img {
+    display: none;
   }
 }
 @media (max-width: 767px) {
