--- a/src/less/style.less
+++ b/src/less/style.less
@@ -40,6 +40,7 @@
 @bg-light: #f0f0e4; /*--почти белый --*/
 @light: #fff;  /*-- белый --*/
 @color-input: #dddddd;  /*-- серый --*/
+@problems-color: #c5c5c5;/* --черный полупрозрачный-- */
 
 /* Basic settings */
 body{
@@ -502,6 +503,53 @@ section{
 		font-size: 1.7rem;
 	}
 }
+/* Мы развеем все проблемы */
+.problems{
+	position: relative;
+	&-h4{		
+	&-bad {
+		opacity: 50%;
+		font-size: 2.4rem;
+		.bold;
+		padding-bottom: 1rem;
+	}
+	&-good {
+		font-size: 2.4rem;
+		.bold;
+		padding-bottom: 1rem;
+	}
+ }
+ &-women {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-57%);
+ }
+	p{
+		font-size: 1.6rem;
+		padding-bottom: 2rem;
+	}
+	img {
+		float: left;
+		// height: 4rem;
+		padding-right: 1rem;
+		margin-top: 0.3rem;
+	}
+	&-bad {
+		min-height: 38rem;
+		padding: 1.8rem;
+		border: 4px solid @problems-color;
+		margin-bottom: 3rem;
+	}
+	&-good {
+		min-height: 38rem;
+		border: 4px solid @icon-color;
+		padding: 1.8rem;
+	}
+}
+
+
 .media {
 	min-height: 15rem;
 	h4{
@@ -514,36 +562,48 @@ section{
 }
 		
 @media (max-width:1199px) {
-			.fotorama{
+	.fotorama{
 				margin-bottom: 3rem;
-			}
-			.form {
-				&-input {
-				  margin: 2rem auto;
-					max-width: 60%;
-				}
-			}
-			.scheme {
-	text-align: center;
+	}
+	.form {
+		&-input {
+		  margin: 2rem auto;
+			max-width: 60%;
 		}
+	}
+	.scheme {
+	text-align: center;
+	margin-bottom: 2rem;
+	}
+	.problems {
+		&-women {
+			display: none;
+		}
+		&-bad {
+			padding: 1rem;
+		}
+		 &-good {
+			padding: 1rem;
+		}
+	}
 }
 
 		
 @media (max-width: 991px) {
-			.main{
+	.main{
 		background-position:top right;
-			}
-			.phone-block{
+	}
+	.phone-block{
 		text-align: center;
-			}
-			.main-content{
+	}
+	.main-content{
 		text-align: center;
-			}
-		 .main-title{
+	}
+	.main-title{
 		 	padding-bottom: 4rem;
-		 }
-		 .price {
-     	&-button {
+  }
+	.price {
+  	&-button {
   	  	text-align: center;
  				padding: 2rem 0;
  			}
@@ -553,22 +613,44 @@ section{
  		}
  		&-block {
  			margin-bottom: 2rem;
- 		}
+		 }
+		
  	}
  .section-header_light {
  	margin-bottom: 0;
   }
  .form {
-	&-input {
-		margin: 2rem auto;
-		max-width: 100%;
-	}
- }
+ 		&-input {
+			margin: 2rem auto;
+			max-width: 100%;
+		}
+  }
   .hand {
  	 display: none;
 	}
 	.scheme {
 		background: none;
+	}
+	.problems {
+		text-align: center;
+		&-bad {
+			text-align: center;
+			padding: 3rem;
+			// border: none;
+			p {
+				text-align: left;
+			}
+			&_1 {
+
+			}
+		}
+
+		&-good {
+			padding: 3rem;
+		}
+		img {
+			display: none;
+		}
 	}
 }
  
